exports[`valid-describe-callback > invalid(1): import {describe, suite} from 'node:test';\ndescribe(\"s\", () => test(\"x\", () => {})); 1`] = `

  1 | import {describe, suite} from 'node:test';
  2 | describe("s", () => test("x", () => {}));

`;

exports[`valid-describe-callback > invalid(1): import {describe, suite} from 'node:test';\ndescribe(\"s\", () => test(\"x\", () => {})); 2`] = `

Message:
  1 | import {describe, suite} from 'node:test';
> 2 | describe("s", () => test("x", () => {}));
    |                     ^^^^^^^^^^^^^^^^^^^ The \`describe\` callback should not return a value, an implicit return registers tests through the returned expression instead of statements. Use a block body.

`;

exports[`valid-describe-callback > invalid(2): import {describe, suite} from 'node:test';\ndescribe(\"s\", t => test(\"x\", () => {})); 1`] = `

  1 | import {describe, suite} from 'node:test';
  2 | describe("s", t => test("x", () => {}));

`;

exports[`valid-describe-callback > invalid(2): import {describe, suite} from 'node:test';\ndescribe(\"s\", t => test(\"x\", () => {})); 2`] = `

Message:
  1 | import {describe, suite} from 'node:test';
> 2 | describe("s", t => test("x", () => {}));
    |                    ^^^^^^^^^^^^^^^^^^^ The \`describe\` callback should not return a value, an implicit return registers tests through the returned expression instead of statements. Use a block body.

`;

exports[`valid-describe-callback > invalid(3): import {describe, suite} from 'node:test';\ndescribe(\"s\", () => ({name: \"s\"})); 1`] = `

  1 | import {describe, suite} from 'node:test';
  2 | describe("s", () => ({name: "s"}));

`;

exports[`valid-describe-callback > invalid(3): import {describe, suite} from 'node:test';\ndescribe(\"s\", () => ({name: \"s\"})); 2`] = `

Message:
  1 | import {describe, suite} from 'node:test';
> 2 | describe("s", () => ({name: "s"}));
    |                      ^^^^^^^^^^^ The \`describe\` callback should not return a value, an implicit return registers tests through the returned expression instead of statements. Use a block body.

`;

exports[`valid-describe-callback > invalid(4): import {describe, suite} from 'node:test';\nsuite(\"s\", () => test(\"x\", () => {})); 1`] = `

  1 | import {describe, suite} from 'node:test';
  2 | suite("s", () => test("x", () => {}));

`;

exports[`valid-describe-callback > invalid(4): import {describe, suite} from 'node:test';\nsuite(\"s\", () => test(\"x\", () => {})); 2`] = `

Message:
  1 | import {describe, suite} from 'node:test';
> 2 | suite("s", () => test("x", () => {}));
    |                  ^^^^^^^^^^^^^^^^^^^ The \`suite\` callback should not return a value, an implicit return registers tests through the returned expression instead of statements. Use a block body.

`;

exports[`valid-describe-callback > invalid(5): import {describe, suite} from 'node:test';\ndescribe.only(\"s\", () => test(\"x\", () => {})); 1`] = `

  1 | import {describe, suite} from 'node:test';
  2 | describe.only("s", () => test("x", () => {}));

`;

exports[`valid-describe-callback > invalid(5): import {describe, suite} from 'node:test';\ndescribe.only(\"s\", () => test(\"x\", () => {})); 2`] = `

Message:
  1 | import {describe, suite} from 'node:test';
> 2 | describe.only("s", () => test("x", () => {}));
    |                          ^^^^^^^^^^^^^^^^^^^ The \`describe\` callback should not return a value, an implicit return registers tests through the returned expression instead of statements. Use a block body.

`;

exports[`valid-describe-callback > invalid(6): import {describe, suite} from 'node:test';\ndescribe.skip(\"s\", () => test(\"x\", () => {})); 1`] = `

  1 | import {describe, suite} from 'node:test';
  2 | describe.skip("s", () => test("x", () => {}));

`;

exports[`valid-describe-callback > invalid(6): import {describe, suite} from 'node:test';\ndescribe.skip(\"s\", () => test(\"x\", () => {})); 2`] = `

Message:
  1 | import {describe, suite} from 'node:test';
> 2 | describe.skip("s", () => test("x", () => {}));
    |                          ^^^^^^^^^^^^^^^^^^^ The \`describe\` callback should not return a value, an implicit return registers tests through the returned expression instead of statements. Use a block body.

`;

exports[`valid-describe-callback > invalid(7): import * as nodeTest from 'node:test';\nnodeTest.describe(\"s\", () => test(\"x\", () => {})); 1`] = `

  1 | import * as nodeTest from 'node:test';
  2 | nodeTest.describe("s", () => test("x", () => {}));

`;

exports[`valid-describe-callback > invalid(7): import * as nodeTest from 'node:test';\nnodeTest.describe(\"s\", () => test(\"x\", () => {})); 2`] = `

Message:
  1 | import * as nodeTest from 'node:test';
> 2 | nodeTest.describe("s", () => test("x", () => {}));
    |                              ^^^^^^^^^^^^^^^^^^^ The \`describe\` callback should not return a value, an implicit return registers tests through the returned expression instead of statements. Use a block body.

`;

exports[`valid-describe-callback > invalid(8): import test from 'node:test';\ntest.describe(\"s\", () => test(\"x\", () => {})); 1`] = `

  1 | import test from 'node:test';
  2 | test.describe("s", () => test("x", () => {}));

`;

exports[`valid-describe-callback > invalid(8): import test from 'node:test';\ntest.describe(\"s\", () => test(\"x\", () => {})); 2`] = `

Message:
  1 | import test from 'node:test';
> 2 | test.describe("s", () => test("x", () => {}));
    |                          ^^^^^^^^^^^^^^^^^^^ The \`describe\` callback should not return a value, an implicit return registers tests through the returned expression instead of statements. Use a block body.

`;

exports[`valid-describe-callback > invalid(9): import {describe, suite} from 'node:test';\ndescribe(\"s\", () => test(\"x\", () => {}) as unknown); 1`] = `

  1 | import {describe, suite} from 'node:test';
  2 | describe("s", () => test("x", () => {}) as unknown);

`;

exports[`valid-describe-callback > invalid(9): import {describe, suite} from 'node:test';\ndescribe(\"s\", () => test(\"x\", () => {}) as unknown); 2`] = `

Message:
  1 | import {describe, suite} from 'node:test';
> 2 | describe("s", () => test("x", () => {}) as unknown);
    |                     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ The \`describe\` callback should not return a value, an implicit return registers tests through the returned expression instead of statements. Use a block body.

`;
